# btclite

./: README.md  autogen.sh  configure.ac
contrib/: bitcoin.conf
src/: Makefile.am  Makefile.test.include  btcdemod.cpp  btclited.cpp  init.cpp  sync.cpp  uint256.cpp  util.cpp  utilstrencodings.cpp  utiltime.cpp
src/chain/include/: block.h  block_chain.h  block_index.h  chain.h  chain_state.h  compact.h  params.h  script.h  script_witness.h  transaction.h
src/chain/proto/: chain.proto
src/chain/src/: block.cpp  block_chain.cpp  block_index.cpp  chain.cpp  chain_state.cpp  chainparams.cpp  compact.cpp  params.cpp  script.cpp  script_witness.cpp  transaction.cpp
src/common/include/: block.h  params.h  transaction.h
src/common/src/: block.cpp  params.cpp  script_witness.cpp  transaction.cpp
src/config/: btcnet.h  environment.h
src/consensus/include/: block.h  compact.h  hash.h  params.h  script.h  script_witness.h  transaction.h  uint256.h
src/consensus/src/: block.cpp  compact.cpp  hash.cpp  params.cpp  script.cpp  script_witness.cpp  transaction.cpp  uint256.cpp
src/crypto/include/: hash.h
src/crypto/src/: hash.cpp
src/fullnode/include/: clientversion.h  config.h  executor.h
src/fullnode/src/: config.cpp  executor.cpp  main.cpp
src/include/: block.h  chainparams.h  clientversion.h  init.h  serialize.h  sync.h  tinyformat.h  uint256.h  util.h  utilstrencodings.h  utiltime.h
src/main/include/: init.h
src/main/src/: btclited.cpp  init.cpp
src/net/include/: net.h
src/network/include/: acceptor.h  bandb.h  banlist.h  block_sync.h  bloom.h  connector.h  libevent.h  message_types.h  msg_process.h  net.h  net_base.h  netbase.h  network_address.h  node.h  p2p.h  params.h  peers.h  protocol.h  session.h  socket.h
src/network/include/message_types/: address.h  version.h
src/network/include/protocol/: addr.h  address.h  getaddr.h  getblocks.h  getheaders.h  inventory.h  inventory_vector.h  message.h  ping.h  pong.h  reject.h  send_compact.h  send_headers.h  verack.h  version.h
src/network/proto/: banmap.proto  network_address.proto  peers.proto
src/network/src/: acceptor.cpp  bandb.cpp  banlist.cpp  block_sync.cpp  connector.cpp  libevent.cpp  msg_process.cpp  net.cpp  net_base.cpp  netbase.cpp  network_address.cpp  node.cpp  p2p.cpp  params.cpp  peers.cpp  protocol.cpp  session.cpp  socket.cpp
src/network/src/message_types/: address.cpp  version.cpp
src/network/src/protocol/: addr.cpp  address.cpp  getaddr.cpp  getblocks.cpp  getheaders.cpp  inventory.cpp  inventory_vector.cpp  message.cpp  ping.cpp  pong.cpp  reject.cpp  send_compact.cpp  send_headers.cpp  verack.cpp  version.cpp
src/transaction/include/: script.h  transaction.h
src/transaction/src/: transaction.cpp
src/unit_test/: main.cpp
src/unit_test/chain/: params_tests.cpp  test_chain.cpp
src/unit_test/chain/src/: block_chain_tests.cpp  chain_state_tests.cpp  compact_tests.cpp
src/unit_test/consensus/src/: compact_tests.cpp
src/unit_test/crypto/: hash.cpp  hash_tests.cpp
src/unit_test/crypto/src/: hash_tests.cpp  test_crypto.cpp
src/unit_test/fullnode/: config_tests.cpp  executor.cpp
src/unit_test/fullnode/src/: config_tests.cpp
src/unit_test/network/: acceptor_tests.cpp  bandb_tests.cpp  block_sync_tests.cpp  block_sync_tests.h  connector_tests.cpp  msg_process_tests.cpp  msg_process_tests.h  net.cpp  net_tests.cpp  net_tests.h  netbase_tests.cpp  network_address_tests.cpp  node_tests.cpp  node_tests.h  p2p_tests.cpp  params_tests.cpp  peers_tests.cpp  socket_tests.cpp  socket_tests.h
src/unit_test/network/include/: acceptor_tests.h  block_sync_tests.h  connector_tests.h  msg_process_tests.h  net_tests.h  node_tests.h
src/unit_test/network/include/protocol/: addr_tests.h  address_tests.h  getblocks_tests.h  inventory_tests.h  inventory_vector_tests.h  message_tests.h  ping_tests.h  pong_tests.h  reject_tests.h  send_compact_tests.h  version_tests.h
src/unit_test/network/protocol/: address_tests.cpp  message_tests.h  ping_tests.cpp  ping_tests.h  reject_tests.cpp  reject_tests.h  version_tests.cpp  version_tests.h
src/unit_test/network/src/: acceptor_tests.cpp  bandb_tests.cpp  banlist_tests.cpp  block_sync_tests.cpp  connector_tests.cpp  msg_process_tests.cpp  net_tests.cpp  netbase_tests.cpp  network_address_tests.cpp  node_tests.cpp  p2p_tests.cpp  params_tests.cpp  peers_tests.cpp  socket_tests.cpp  test_network.cpp
src/unit_test/network/src/protocol/: addr_tests.cpp  address_tests.cpp  getblocks_tests.cpp  getheaders_tests.cpp  inventory_tests.cpp  inventory_vector_tests.cpp  message_tests.cpp  ping_tests.cpp  pong_tests.cpp  reject_tests.cpp  send_compact_tests.cpp  version_tests.cpp
src/unit_test/utility/: random.cpp  random_tests.cpp  serialize_tests.cpp  stream_tests.cpp  string_encoding_tests.cpp  util_tests.cpp  util_tests.h
src/unit_test/utility/include/: circular_buffer_tests.h
src/unit_test/utility/src/: arithmetic_tests.cpp  circular_buffer_tests.cpp  random_tests.cpp  serialize_tests.cpp  stream_tests.cpp  string_encoding_tests.cpp  util_endian_tests.cpp  util_tests.cpp
src/utility/: sync.cpp
src/utility/include/: Assert.h  Endian.h  arithmetic.h  blob.h  circular_buffer.h  constants.h  error.h  fs.h  logging.h  random.h  serialize.h  stream.h  string_encoding.h  sync.h  thread.h  thread_interrupt.h  timer.h  tinyformat.h  util.h  util_assert.h  util_endian.h  util_time.h  utilstrencodings.h  utiltime.h
src/utility/src/: arithmetic.cpp  circular_buffer.cpp  error.cpp  logging.cpp  random.cpp  serialize.cpp  stream.cpp  string_encoding.cpp  sync.cpp  thread.cpp  thread_interrupt.cpp  timer.cpp  util.cpp  util_time.cpp  utilstrencodings.cpp  utiltime.cpp
